feat: add sdk/137/include/ASICamera2.h and relative libs to workspace
feat: add sdk/137/include/ASICamera2.h and relative libs to workspace

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,11 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# MacOS
+.DS_STORE
+
+# ZWO ASI Specific SDK
+!sdk
+!sdk/*/include
+!sdk/*/lib
