--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,9 @@ dev = [
   "ruff>=0.9.7",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = [".", "src"]
+asyncio_default_fixture_loop_scope = ["session"]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/zwoasi"]
