chore: amend devcontainer.json to provide usb passthrough if needed
chore: amend devcontainer.json to provide usb passthrough if needed

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -59,6 +59,7 @@
   "postStartCommand": "/bin/zsh",
   "runArgs": [
     "--network=host",
+    "--privileged",
     "--env-file",
     "${localWorkspaceFolder}/.devcontainer/.env.config"
   ]
