ci: add .github/workflows/publish.yml for publish to pypi in workspace root
ci: add .github/workflows/publish.yml for publish to pypi in workspace root

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,8 @@ jobs:
       - name: Static Analysis w/mypy
         run: |
           uv run mypy ./src/zwo --config mypy.ini
+
+      - name: Build w/Hatch Build Backend 🔧
+        run: |
+          uv build
           
