--- a/mypy.ini
+++ b/mypy.ini
@@ -3,3 +3,6 @@ mypy_path = src
 namespace_packages = True
 explicit_package_bases = True
 plugins = pydantic.mypy
+
+[mypy-astropy.*]
+ignore_missing_imports = True
