--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+  "astropy>=7.0.1",
   "mypy>=1.15.0",
   "pre-commit>=4.1.0",
   "pytest>=8.3.4",
