--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,10 @@ requires-python = ">=3.13"
 dependencies = ["pydantic>=2.10.6"]
 
 [project.urls]
-repository = "https://github.com/michealroberts/zwoasi"
-issues = "https://github.com/michealroberts/zwoasi/issues"
+Source = "https://github.com/michealroberts/zwoasi"
+Issues = "https://github.com/michealroberts/zwoasi/issues"
+PullRequests = "https://github.com/michealroberts/zwoasi/pulls"
+Discussions = "https://github.com/michealroberts/zwoasi/discussions"
 
 [project.scripts]
 zwo = "zwo:main"
